<package>
  <name>local_planner</name>
  <version>0.0.1</version>
  <description>Local Planner</description>
  <maintainer email="zhangji@cmu.edu">Ji Zhang</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_eigen</depend>
  <depend>pcl_conversions</depend>
</package>
